--- a/css/base.css
+++ b/css/base.css
@@ -1,16 +1,43 @@
 html, body{
 	width: 100%;
+	height: 100%;
 	padding: 0;
 	margin: 0;
-	background: black;
 }
-
+#main{
+	width: 60%;
+	height: 95%;
+	margin: 0 auto;
+	text-align: center;
+}
 footer{
 	width: 100%;
+	height: 5%;
+	text-align: center;
+	padding-top: 7px;
+	border-top: 1px solid #eee;
+	background: #333;
+}
+footer a{
+	color: #eee;
+	text-decoration: none;
 }
 
-footer nav{
-	width: 50%;
-	margin: 0 auto;
-	
+footer a:hover{
+	text-decoration: underline;
+}
+
+/* Youtube video */
+iframe{
+	width: 100%;
+	max-width: 560px;
+}
+
+/* Play and app store images (links) */
+#store{
+	width: 100%;
+}
+#store img{
+	width: 47%;
+	max-width: 172px;
 }
