--- a/css/base.css
+++ b/css/base.css
@@ -5,18 +5,22 @@ html, body{
 	margin: 0;
 }
 #main{
-	width: 60%;
-	height: 95%;
+	width: 100%;
+	height: 90%;
 	margin: 0 auto;
 	text-align: center;
 }
 footer{
 	width: 100%;
-	height: 5%;
 	text-align: center;
 	padding-top: 7px;
 	border-top: 1px solid #eee;
 	background: #333;
+	
+	height: 25px;
+	position: absolute;
+	bottom: 0;
+	left: 0;
 }
 footer a{
 	color: #eee;
@@ -31,13 +35,21 @@ footer a:hover{
 iframe{
 	width: 100%;
 	max-width: 560px;
+	
+	height: 56.25vw;
+	 /*
+		33.75vw = 100% width * 100% main width * 9/16
+	 */
+	 max-height: 315px;
 }
 
 /* Play and app store images (links) */
-#store{
+#store{ 
 	width: 100%;
+	margin-top: 35px;
 }
 #store img{
 	width: 47%;
 	max-width: 172px;
+	margin: 0 20px;
 }
