--- a/css/base.css
+++ b/css/base.css
@@ -61,7 +61,7 @@ iframe{
 /* Mobile rules */
 
 .mobile.portrait #logo{
-	margin-bottom: 5vh;
+	margin: 3vh 0 13vh 0;
 }
 
 .mobile.portrait #logo img{
@@ -69,14 +69,14 @@ iframe{
 }
 
 .mobile.portrait iframe{
-	max-width: 100%;
-	height: 50vh;
-	max-height: 50vh;
+	max-width: 90%;
+	height: 50.625vw;
+	max-height: 50.625vw;
 }
 
 .mobile.portrait #store{
 	position: absolute;
-	bottom: 4vh;
+	bottom: 8vh;
 	margin: 0;
 }
 
